Update and rename doc.html to index.html

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="doc.css">
+    <link rel="stylesheet" href="index.css">
     <title>CV PERSONNELLE</title>
 </head>
 <body>
     <div class="profile-header">
-        <img src="C:\Users\hp\Downloads\piclink.jpg" alt="image">
+        <img src="piclink.jpg" alt="image">
         <div class="name">
             <h3>Lahoussine EL HOSSNI</h3>
         </div>
